Add Server Core support for Open/Save File Dialogs
Based on the code provided by @kpreisser here - https://github.com/microsoft/dotnet-framework-early-access/issues/23#issuecomment-393134611

This allows the Open File and Save File dialogs used by Configuration.DkimSigner.exe to use the legacy interfaces supported on Server Core installations.

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,4 @@ UpgradeLog*.XML
 /Src/Configuration.DkimSigner/bin/Release/Configuration.DkimSigner.vshost.exe.manifest
 /cov-int
 /cov-int.zip
+.vscode/tasks.json
