--- a/.gitignore
+++ b/.gitignore
@@ -107,16 +107,13 @@ _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
 
-/Src/Exchange.DkimSigner/bin/Debug *
-/Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Common.dll
-/Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Common.xml
-/Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Transport.dll
-/Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Transport.xml
 
-/Src/Configuration.DkimSigner/bin/Debug *
-/Src/Configuration.DkimSigner/bin/Release/Configuration.DkimSigner.vshost.exe*
-/Src/Configuration.DkimSigner/bin/Release/Configuration.DkimSigner.vshost.exe
-/Src/Configuration.DkimSigner/bin/Release/Configuration.DkimSigner.vshost.exe.manifest
 /cov-int
 /cov-int.zip
 .vscode/tasks.json
+
+bin/
+obj/
+.idea/
+.vs/
+
